Update solar site

--- a/use_it/setup/index.html
+++ b/use_it/setup/index.html
@@ -462,6 +462,16 @@ window.cookieconsent.initialise({
         <div class="container">
             <div class="well">
               <h1>setup</h1>
+<div id="toc" class="toc">
+<div id="toctitle">Table of Contents</div>
+<ul class="sectlevel1">
+<li><a href="#development_overview">Development overview</a></li>
+<li><a href="#solarframework_installer_for_windows">SolarFramework Installer for windows</a></li>
+<li><a href="#install_your_c_ide_for_windows">Install your C++ IDE for windows</a></li>
+<li><a href="#solarframework_installer_for_linux">SolarFramework Installer for linux</a></li>
+<li><a href="#frequently_asked_questions">Frequently Asked Questions</a></li>
+</ul>
+</div>
 <div class="sect1">
 <h2 id="development_overview"><a class="anchor" href="#development_overview"></a><a class="link" href="#development_overview">Development overview</a></h2>
 <div class="sectionbody">
@@ -634,7 +644,7 @@ to learn the basics of SolAR.</p>
 <h2 id="solarframework_installer_for_linux"><a class="anchor" href="#solarframework_installer_for_linux"></a><a class="link" href="#solarframework_installer_for_linux">SolarFramework Installer for linux</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>There is not a simplified installer for Linux, but you can use the same procedure as for contribtuting there : link: <a href="../contribute/contribute/getting_started_linux/"><strong>getting started linux</strong></a>.</p>
+<p>There is not a simplified installer for Linux, but you can use the same procedure as for contribtuting there :  <a href="../contribute/getting_started_linux/"><strong>getting started linux</strong></a>.</p>
 </div>
 </div>
 </div>
