Update solar site

--- a/use_it/setup/index.html
+++ b/use_it/setup/index.html
@@ -644,7 +644,7 @@ to learn the basics of SolAR.</p>
 <h2 id="solarframework_installer_for_linux"><a class="anchor" href="#solarframework_installer_for_linux"></a><a class="link" href="#solarframework_installer_for_linux">SolarFramework Installer for linux</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>There is not a simplified installer for Linux, but you can use the same procedure as for contribtuting there :  <a href="../contribute/getting_started_linux/"><strong>getting started linux</strong></a>.</p>
+<p>There is not a simplified installer for Linux, but you can use the same procedure as for contribtuting there :  <a href="../../contribute/getting_started_linux/"><strong>getting started linux</strong></a>.</p>
 </div>
 </div>
 </div>
