Update solar site

--- a/use_it/index.html
+++ b/use_it/index.html
@@ -497,7 +497,7 @@ window.cookieconsent.initialise({
 <p>download and execute the SolAR installer. It will install all you need to user SolAR Framework. <a href="setup"><strong>setup</strong></a>. It will only take 15 minutes.</p>
 </li>
 <li>
-<p>download and test solAR sample code : <a href="samples"><strong>sample codes</strong></a>, compile it and run it. You will learn about SolARFramework use (code organization, API call). It will take about 30 minutes.</p>
+<p>test solAR sample code : <a href="samples"><strong>sample codes</strong></a>, compile it and run it. You will learn about SolARFramework use (code organization, API call). It will take about 30 minutes.</p>
 </li>
 <li>
 <p>implement your own program based on SolAR: to help you some tutorials will soon be available.
