--- a/use_it/setup/index.html
+++ b/use_it/setup/index.html
@@ -467,7 +467,6 @@ window.cookieconsent.initialise({
 <ul class="sectlevel1">
 <li><a href="#development_overview">Development overview</a></li>
 <li><a href="#solarframework_installer_for_windows">SolarFramework Installer for windows</a></li>
-<li><a href="#install_your_c_ide_for_windows">Install your C++ IDE for windows</a></li>
 <li><a href="#solarframework_installer_for_linux">SolarFramework Installer for linux</a></li>
 <li><a href="#frequently_asked_questions">Frequently Asked Questions</a></li>
 </ul>
@@ -630,13 +629,8 @@ to learn the basics of SolAR.</p>
 <div class="paragraph">
 <p>Please use the default values: it will install everything you need to use SolAR, especially if you want to first test a sample code.</p>
 </div>
-</div>
-</div>
-<div class="sect1">
-<h2 id="install_your_c_ide_for_windows"><a class="anchor" href="#install_your_c_ide_for_windows"></a><a class="link" href="#install_your_c_ide_for_windows">Install your C++ IDE for windows</a></h2>
-<div class="sectionbody">
 <div class="paragraph">
-<p>Please refer to "the getting started with windows" part of the website link: <a href="https://solarframework.github.io/contribute/getting_started_windows/#install_your_ide_for_windows">here</a></p>
+<p>NOTE : Please refer to the samples part to know how to use samples <a href="../../use_it/getting_started_linux/"><strong>getting started linux</strong></a>..</p>
 </div>
 </div>
 </div>
