Update solar site

--- a/contribute/getting_started_linux/index.html
+++ b/contribute/getting_started_linux/index.html
@@ -498,7 +498,7 @@ window.cookieconsent.initialise({
 <div class="content">
 <div class="literalblock">
 <div class="content">
-<pre>sudo apt-get install python3-pip unzip build-essential gdb git pkg-config default-jre libqt5core5a libgtk2.0-0 libwebp5 libjasper1 libopenexr22 libopenni0 libdc1394-22 libavcodec-ffmpeg56 libavutil-ffmpeg54 libavformat-ffmpeg56 libswscale-ffmpeg3</pre>
+<pre>sudo  apt-get install -y python2.7 unzip build-essential git pkg-config qt5-qmake default-jre curl libqt5core5a libgtk2.0-0 libwebp5 libjasper1 libopenexr22 libopenni0 libdc1394-22 libavcodec-ffmpeg56 libavutil-ffmpeg54 libavformat-ffmpeg56 libswscale-ffmpeg3</pre>
 </div>
 </div>
 </div>
