--- a/contribute/getting_started_linux/index.html
+++ b/contribute/getting_started_linux/index.html
@@ -498,13 +498,24 @@ window.cookieconsent.initialise({
 <div class="content">
 <div class="literalblock">
 <div class="content">
-<pre>sudo  apt-get install -y python2.7 unzip build-essential git pkg-config qt5-qmake default-jre curl libqt5core5a libgtk2.0-0 libwebp5 libjasper1 libopenexr22 libopenni0 libdc1394-22 libavcodec-ffmpeg56 libavutil-ffmpeg54 libavformat-ffmpeg56 libswscale-ffmpeg3</pre>
+<pre>sudo  apt-get install -y python2.7 unzip build-essential git pkg-config qt5-qmake qt4-qmake default-jre curl libqt5core5a libgtk2.0-0 libwebp5 libjasper1 libopenexr22 libopenni0 libdc1394-22 libavcodec-ffmpeg56 libavutil-ffmpeg54 libavformat-ffmpeg56 libswscale-ffmpeg3</pre>
 </div>
 </div>
 </div>
 </div>
 <div class="paragraph">
-<p>And follow the instructions to complete the installation</p>
+<p>And follow the instructions to complete the installation.</p>
+</div>
+<div class="paragraph">
+<p>Check your system is up-to-date :</p>
+</div>
+<div class="sidebarblock">
+<div class="content">
+<div class="paragraph">
+<p>sudo apt update
+sudo apt dist-upgrade</p>
+</div>
+</div>
 </div>
 </div>
 <div class="sect2">
@@ -570,6 +581,19 @@ mkdir [path]/BCOMDEVROOT/linux</pre>
 <div class="literalblock">
 <div class="content">
 <pre>export PATH=/opt/Qt5.9.1/5.9/gcc_64/bin/:/opt/Qt5.9.1/Tools/QtCreator/bin/:$PATH</pre>
+</div>
+</div>
+<div class="paragraph">
+<p>Force the system to take those paths in account:</p>
+</div>
+<div class="sidebarblock">
+<div class="content">
+<div class="paragraph">
+<p>source ~/.profil</p>
+</div>
+<div class="paragraph">
+<p>source .bashrc</p>
+</div>
 </div>
 </div>
 </div>
