--- a/contribute/getting_started_linux/index.html
+++ b/contribute/getting_started_linux/index.html
@@ -498,7 +498,7 @@ window.cookieconsent.initialise({
 <div class="content">
 <div class="literalblock">
 <div class="content">
-<pre>sudo  apt-get install -y python2.7 unzip build-essential git pkg-config qt5-qmake qt4-qmake default-jre curl libqt5core5a libgtk2.0-0 libwebp5 libjasper1 libopenexr22 libopenni0 libdc1394-22 libavcodec-ffmpeg56 libavutil-ffmpeg54 libavformat-ffmpeg56 libswscale-ffmpeg3</pre>
+<pre>sudo  apt-get install -y python2.7 unzip build-essential git pkg-config qt5-qmake qt4-qmake default-jre curl libqt5core5a libgtk2.0-0 libwebp5 libjasper1 libopenexr22 libopenni0 libdc1394-22 libavcodec-ffmpeg56 libavutil-ffmpeg54 libavformat-ffmpeg56 libswscale-ffmpeg3 qt5-default</pre>
 </div>
 </div>
 </div>
@@ -512,8 +512,20 @@ window.cookieconsent.initialise({
 <div class="sidebarblock">
 <div class="content">
 <div class="paragraph">
-<p>sudo apt update
-sudo apt dist-upgrade</p>
+<p>sudo apt update</p>
+</div>
+<div class="paragraph">
+<p>sudo apt dist-upgrade</p>
+</div>
+</div>
+</div>
+<div class="paragraph">
+<p>Then execute  this line :</p>
+</div>
+<div class="sidebarblock">
+<div class="content">
+<div class="paragraph">
+<p>sudo ln -s /usr/lib/libOpenNI.so.0 /usr/lib/libOpenNI.so</p>
 </div>
 </div>
 </div>
