--- a/applications/index.html
+++ b/applications/index.html
@@ -517,9 +517,14 @@ window.cookieconsent.initialise({
 
         <div class="container">
             <div class="well ">
-              <h1>Applications</h1>
-<div class="sect1">
+              <div class="sect1">
 <h2 id="applications"><a class="anchor" href="#applications"></a><a class="link" href="#applications">Applications</a></h2>
+<div class="sectionbody">
+
+</div>
+</div>
+<div class="sect1">
+<h2 id="applications_2"><a class="anchor" href="#applications_2"></a><a class="link" href="#applications_2">Applications</a></h2>
 <div class="sectionbody">
 
 </div>
