Update solar site

--- a/applications/index.html
+++ b/applications/index.html
@@ -557,10 +557,12 @@ window.cookieconsent.initialise({
 <h2 id="real_estate"><a class="anchor" href="#real_estate"></a><a class="link" href="#real_estate">Real estate</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>You can find here a document describing use case identified for the real estate.</p>
+<p>You can find here a document describing use case identified for the real estate.
+<a href="https://github.com/SolarFramework/binaries/releases/download/Documentsrealestate/ARGO-RealEstate-Rapport-pour-publication-e_EN-final.pdf">english version</a></p>
 </div>
 <div class="paragraph">
-<p><a href="https://github.com/SolarFramework/binaries/releases/download/Documentsrealestate/ARGO-Factory-Rapport-pour-publication-e.pdf">English version</a></p>
+<p>You can find here a document describing use case identified for the real estate.
+<a href="https://github.com/SolarFramework/binaries/releases/download/UsecaseImmobilier/ARGO-Immobilier-Rapport.pour.publication-FR.pdf">french version</a></p>
 </div>
 <div class="paragraph">
 <p>You can also read it in your web browser here <a href="realestate"><strong>real estate</strong></a>.</p>
