--- a/applications/realestate/index.html
+++ b/applications/realestate/index.html
@@ -546,8 +546,16 @@ window.cookieconsent.initialise({
 <div class="sect1">
 <h2 id="real_estate_2"><a class="anchor" href="#real_estate_2"></a><a class="link" href="#real_estate_2">Real Estate</a></h2>
 <div class="sectionbody">
-<div id="Real-estate-Use-Case" class="paragraph">
-<p>Document here <a href="https://github.com/SolarFramework/binaries/releases/download/Documentsrealestate/ARGO-Factory-Rapport-pour-publication-e.pdf">english version</a></p>
+<div class="paragraph">
+<p>You can find here a document describing use case identified for the real estate.
+<a href="https://github.com/SolarFramework/binaries/releases/download/Documentsrealestate/ARGO-RealEstate-Rapport-pour-publication-e_EN-final.pdf">english version</a></p>
+</div>
+<div class="paragraph">
+<p>You can find here a document describing use case identified for the real estate.
+<a href="https://github.com/SolarFramework/binaries/releases/download/UsecaseImmobilier/ARGO-Immobilier-Rapport.pour.publication-FR.pdf">english version</a></p>
+</div>
+<div class="paragraph">
+<p>You can also read it in your web browser here <a href="realestate"><strong>real estate</strong></a>.</p>
 </div>
 </div>
 </div>
