Update solar site

--- a/applications/index.html
+++ b/applications/index.html
@@ -529,7 +529,7 @@ window.cookieconsent.initialise({
 </div>
 
         <div class="container">
-            <div class="well ">
+            <div class="well yellow">
               <div class="sect1">
 <h2 id="applications"><a class="anchor" href="#applications"></a><a class="link" href="#applications">Applications</a></h2>
 <div class="sectionbody">
