--- a/contribute/ComponentInterfaceDescription/Acquisition/index.html
+++ b/contribute/ComponentInterfaceDescription/Acquisition/index.html
@@ -529,7 +529,7 @@ window.cookieconsent.initialise({
 </div>
 
         <div class="container">
-            <div class="well ">
+            <div class="well red">
               <div class="sect3">
 <h4 id="description"><a class="anchor" href="#description"></a><a class="link" href="#description">Description</a></h4>
 <div class="paragraph">
