--- a/contribute/ComponentInterfaceDescription/Image/index.html
+++ b/contribute/ComponentInterfaceDescription/Image/index.html
@@ -529,7 +529,7 @@ window.cookieconsent.initialise({
 </div>
 
         <div class="container">
-            <div class="well ">
+            <div class="well red">
               <div class="sect3">
 <h4 id="camera"><a class="anchor" href="#camera"></a><a class="link" href="#camera">Camera</a></h4>
 <div class="paragraph">
