--- a/contribute/ComponentInterfaceDescription/PoseEstimation/index.html
+++ b/contribute/ComponentInterfaceDescription/PoseEstimation/index.html
@@ -529,7 +529,7 @@ window.cookieconsent.initialise({
 </div>
 
         <div class="container">
-            <div class="well ">
+            <div class="well red">
               <div class="paragraph">
 <p>ToDo</p>
 </div>
