--- a/contribute/DataStructureDescription/Image/index.html
+++ b/contribute/DataStructureDescription/Image/index.html
@@ -529,7 +529,7 @@ window.cookieconsent.initialise({
 </div>
 
         <div class="container">
-            <div class="well ">
+            <div class="well red">
               <div class="paragraph">
 <p>A SolAR image is an array of pixels where each pixel is defined by a set of color components coded with a given number of bits. Each pixel can be encoded with a dedicated colorimetric space (RGB, YUV, LAB, etc.). Contrary to OpenCV, an image is not just a matrix or an array. A SolAR image is clearly defined as an image object to ensure that a component waiting for an image as an input will not receive a random matrix such as a pose. Thus, an image is defined by:</p>
 </div>
