--- a/contribute/DataStructureDescription/Pose/index.html
+++ b/contribute/DataStructureDescription/Pose/index.html
@@ -529,7 +529,7 @@ window.cookieconsent.initialise({
 </div>
 
         <div class="container">
-            <div class="well ">
+            <div class="well red">
               <div class="paragraph">
 <p>The <em>SolaARPose</em> data structure is based on a standard row major homogeneous 4x4 matrix. Euler angles and quaternions can be directly extracted from this structure built using <a href="http://eigen.tuxfamily.org/index.php?title=Main_Page">Eigen</a> algorithms.</p>
 </div>
