--- a/contribute/contribution_workflow/index.html
+++ b/contribute/contribution_workflow/index.html
@@ -529,7 +529,7 @@ window.cookieconsent.initialise({
 </div>
 
         <div class="container">
-            <div class="well ">
+            <div class="well red">
               <h1>Contribution workflow</h1>
 <div id="toc" class="toc">
 <div id="toctitle">Table of Contents</div>
