--- a/use_it/index.html
+++ b/use_it/index.html
@@ -529,7 +529,7 @@ window.cookieconsent.initialise({
 </div>
 
         <div class="container">
-            <div class="well ">
+            <div class="well purple">
               <h1>Use it !</h1>
 <div id="toc" class="toc">
 <div id="toctitle">Table of Contents</div>
