--- a/use_it/tutorials/FiducialMarker/fiducialMarker/index.html
+++ b/use_it/tutorials/FiducialMarker/fiducialMarker/index.html
@@ -529,7 +529,7 @@ window.cookieconsent.initialise({
 </div>
 
         <div class="container">
-            <div class="well ">
+            <div class="well purple">
               <div class="paragraph">
 <p>This tutorial will walk you through the implementation of one of the first solution to do augmented reality: The fiducial marker.
 The tutorial will <strong>take approximately one hour</strong> to complete.</p>
