--- a/applications/state_of_the_art/index.html
+++ b/applications/state_of_the_art/index.html
@@ -529,7 +529,7 @@ window.cookieconsent.initialise({
 </div>
 
         <div class="container">
-            <div class="well ">
+            <div class="well yellow">
               <h1>State of the art</h1>
 
               
