--- a/contribute/ComponentInterfaceDescription/Optimization/index.html
+++ b/contribute/ComponentInterfaceDescription/Optimization/index.html
@@ -529,7 +529,7 @@ window.cookieconsent.initialise({
 </div>
 
         <div class="container">
-            <div class="well ">
+            <div class="well red">
               <div class="sect3">
 <h4 id="extraction"><a class="anchor" href="#extraction"></a><a class="link" href="#extraction">Extraction</a></h4>
 <div class="paragraph">
