--- a/contribute/getting_started_windows/index.html
+++ b/contribute/getting_started_windows/index.html
@@ -379,7 +379,7 @@ window.cookieconsent.initialise({
 
 		<li >
 			<a href="/use_it/api/">
-				API
+				API 0.5.0
 				
 			</a>
 		</li>
@@ -686,7 +686,7 @@ You can get the Windows Driver Kit that contains the debugging tools from [<a hr
 <div class="sect2">
 <h3 id="install_visual_studio"><a class="anchor" href="#install_visual_studio"></a><a class="link" href="#install_visual_studio">Install Visual Studio</a></h3>
 <div class="paragraph">
-<p>You can either install Visual Community 2015 or 2017 (adapted for OpenSource) or install Visual Studio 2015 or 2017.</p>
+<p>You can either install Visual Community 2017 (adapted for OpenSource) or install Visual Studio 2017.</p>
 </div>
 <div class="imageblock">
 <div class="content">
