Update solar site

--- a/contribute/getting_started_windows/index.html
+++ b/contribute/getting_started_windows/index.html
@@ -778,7 +778,7 @@ Please feel free to give your feedbacks !
 </ul>
 </div>
 <div class="paragraph">
-<p>This will be used for your developement. All code concerning SolARFramework will be there.</p>
+<p>This will be used for your development. All code concerning SolARFramework will be there.</p>
 </div>
 <div class="ulist">
 <ul>
@@ -849,7 +849,7 @@ you have to choose to checkout on the master or on the develop branch. If you wa
 <h2 id="build_projects"><a class="anchor" href="#build_projects"></a><a class="link" href="#build_projects">build projects</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>You have to compile those projects. Please open each of them and do this:</p>
+<p>You have to compile those projects. Please open each of them in QT Creator (is recommended) and do this:</p>
 </div>
 <div class="ulist">
 <ul>
