Update solar site

--- a/applications/index.html
+++ b/applications/index.html
@@ -558,6 +558,15 @@ window.cookieconsent.initialise({
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="health"><a class="anchor" href="#health"></a><a class="link" href="#health">Health</a></h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>You can find here a document describing use case identified for Healthcare
+<a href="https://github.com/SolarFramework/binaries/releases/download/HealthUseCases/ARGO-Healthcare-Rapport-f-14-12.pdf">french version</a></p>
+</div>
+</div>
+</div>
               
             </div>
         </div>
