Update solar site

--- a/use/unity/index.html
+++ b/use/unity/index.html
@@ -753,7 +753,7 @@ If you are a Unity newbie, check tutos online to help you.
 <div class="paragraph">
 <p>The SolAR plugin for Unity is a simple interface to load any SolAR pipelines assembled by the SolAR pipeline assemblers and use them to design AR services with Unity.<br>
 <br>
-To load a SolAR pipeline in Unity, simply drag and drop the <em>SolARPipelineLoader</em> prefab (in SolAR/Prefabs) in your scene hierarchy. The <em>SolARPipelineLoader</em> has the following parameters:</p>
+To load a SolAR pipeline in Unity, simply drag and drop the <em>SolARPipelineLoader</em> prefab (in SolAR/Prefabs/novice) in your scene hierarchy. The <em>SolARPipelineLoader</em> has the following parameters:</p>
 </div>
 <div class="ulist">
 <ul>
