Update solar site

--- a/install/linux/index.html
+++ b/install/linux/index.html
@@ -718,6 +718,20 @@ To download the dependencies in debug mode, run the following command:</p>
 <p>SolAR is made up of a multitude of projects (SolAR Framework, SolAR pipeline manager, modules, samples, etc.). To help you, we have created a parent repository with sub-modules regrouping all source codes of SolAR. You can clone it from the following url:
 <a href="https://github.com/SolarFramework/SolAR.git" class="bare">https://github.com/SolarFramework/SolAR.git</a></p>
 </div>
+<div class="listingblock">
+<div class="content">
+<pre>git clone https://github.com/SolarFramework/SolAR.git</pre>
+</div>
+</div>
+<div class="paragraph">
+<p>Do not forget to install and update recursively the submodules:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre>cd SolAR
+git submodule update --init --recursive</pre>
+</div>
+</div>
 <div class="paragraph">
 <p>If you do not want to download all the source codes of SolAR, you can have a look to the different repositories available on Github on the <a href="../../community/GIT/index.html#GIT repositories">Community/Git page</a>.</p>
 </div>
