Update solar site

--- a/install/windows/index.html
+++ b/install/windows/index.html
@@ -703,6 +703,9 @@ As you will see later, the SolAR framework is based on <em>QMake</em> originally
 <p>This command will install the qmake building rules in your ${USER_HOME}/.remaken/rules folder.<br></p>
 </div>
 <div class="paragraph">
+<p>Remaken is compatible with Conan. As Conan will use CMake ot build your third parties, you will need to install it before using Remaken by launching the installer available <a href="https://cmake.org/download/">here</a>.</p>
+</div>
+<div class="paragraph">
 <p>Remaken uses a file called <em>packagedependencies.txt</em> to describe which depedencies to install, in which version, where to install them, and where to download them.<br></p>
 </div>
 <div class="paragraph">
