--- a/index.html
+++ b/index.html
@@ -545,9 +545,9 @@ window.cookieconsent.initialise({
   </article>
   <article class="col-md-12">
     <h2>What is SolAR?</h2>
-    <p>SolAR is an open-source framework dedicated to Augmented Reality. </p>
+    <p>SolAR is an open-source framework under Apache v2 licence dedicated to Augmented Reality. </p>
     <br />
-    <p>SolAR is modular and evolutive. It allows, in various contexts of use, the construction of customized computer vision pipelines targeting Augmented Reality applications.</p>
+    <p>SolAR is modular and evolutive. It allows, in various contexts of use, the construction of customized computer vision pipelines targeting Augmented Reality applications (e.g. camera pose estimation or 3D mapping).</p>
     <br />
     <p>SolAR contains:
       <div class="container">
